add image in index.html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <h1>Im adding git</h1>
     <h3>modify</h3>
+    <img src="img.jpg" alt="image" height="500" width="500">
 </body>
 
 </html>
