--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <h1>Im adding git</h1>
     <h3>modify</h3>
+    <p>This line is here to show how merging works.</p>
 </body>
 
 </html>
