add anothe image in hello-world-images branch

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <h1>Im adding git</h1>
     <h3>modify</h3>
     <img src="img.jpg" alt="image" height="500" width="500">
+    <div class="img2">
+             <img src="img2.jpg" alt="image2" height="500" width="500">
+    </div>
 </body>
 
 </html>
