--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <h1>Im adding git</h1>
     <h3>modify</h3>
     <p>This line is here to show how merging</p>
-    <img src="img.jpg" alt="image"style="width:100%;max-width:640px">
+    <img src="img.jpg" alt="image"style="max-width:640px">
     <div class="img2">
-        <img src="img2.jpg" alt="image2" style="width:100%;max-width:640px">
+        <img src="img2.jpg" alt="image2" style="max-width:640px">
     </div>
 </body>
 
